tests/misc_errors/var.li
var i = 0
var i = 0
var n: int = 's'
n = 's'

var (t1, t2): (int, int) = ('a', 'b')
(i, n) = ('a', 'b')

var _ = 10
echo(_)

fn f() {
  n = '10'
  (i, n) = ('a', 'b')
}

fn mismatched_variables_count() {
  var (a, b, c): (int, int)
}

fn assign_to_const() {
  const (a, b) = (0, 1)
  a = 10
  b = 10
  (a, b) = 10

  const arr = [[0, 1], [2, 3]]
  arr = 0
  arr[0] = 0
  arr[0][0] = 0
}
